name:          logicalsizetest
version:       0.0.1.0
homepage:      http://github.com/typetetris/sdl-exploration
license:       MIT
license-file:  LICENSE
author:        Eric Wolf
maintainer:    ericwolf42@gmail.com
copyright:     2018 Eric Wolf
build-type:    Simple
cabal-version: >=1.10
category:      trivial

executable logicalsizetest
    hs-source-dirs:   .
    main-is:          logicalsizetest.hs
    default-language: Haskell2010
    build-depends:   protolude
                   , base
                   , sdl2
                   , linear
                   , vector
